2023-02-06  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/testutils.c (test_aead): Always use set_nonce function
	pointer if non-NULL, test varying alignment, output the unexpected
	data when test fails.

2023-01-25  Niels Möller  <nisse@lysator.liu.se>

	* ocb.c (ocb_crypt_n, ocb_checksum_n): New functions, processing
	complete blocks.
	(ocb_encrypt, ocb_decrypt): Use new functions.

	* testsuite/ocb-test.c (test_main): Add tests with larger messages.

	* examples/nettle-benchmark.c (main): Benchmark ocb_aes128.

2022-12-05  Niels Möller  <nisse@lysator.liu.se>

	* xts-aes128.c (xts_aes128_encrypt_message)
	(xts_aes128_decrypt_message): const-declare the xts_key argument.
	* xts-aes256.c (xts_aes256_encrypt_message)
	(xts_aes256_decrypt_message): Likewise.

2022-11-09  Niels Möller  <nisse@lysator.liu.se>

	From Mamone Tarsha:
	* powerpc64/p9/poly1305-blocks.asm: New file, multi-block radix
	2^44 implementation. Benchmarked to give a speedup of 3.2 times on
	Power9.
	* powerpc64/p9/poly1305.m4 (DEFINES_BLOCK_R64, BLOCK_R64): New
	file, new macros.
	* powerpc64/p9/poly1305-internal.asm: Use BLOCK_R64 macro.
	* powerpc64/machine.m4 (INC_GPR, INC_VR): New macros.
	* powerpc64/fat/poly1305-blocks.asm: New file.
	* poly1305-update.c: Check HAVE_NATIVE_fat_poly1305_blocks, and
	define _nettle_poly1305_blocks_c when needed.
	* fat-ppc.c: Fat setup for _nettle_poly1305_blocks.

2022-11-07  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac (ASM_FLAGS): New configure environment variable.
	* aclocal.m4 (GMP_TRY_ASSEMBLE): Use $ASM_FLAGS.
	* config.make.in (ASM_FLAGS): Add substitution.
	* Makefile.in: Use $(ASM_FLAGS) when compiling .asm files.

2022-10-31  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: (asm_file_list): Add HAVE_NATIVE_poly1305_blocks.
	(asm_nettle_optional_list): Add poly1305-blocks.asm.
	* x86_64/poly1305-blocks.asm: New file.

	* md-internal.h (MD_FILL_OR_RETURN_INDEX): New macro.