@@ -4,6 +4,10 @@
 	pointer if non-NULL, test varying alignment, output the unexpected
 	data when test fails.
 
+2023-02-01  Niels Möller  <nisse@lysator.liu.se>
+	* ocb.c (ocb_checksum_n): Implement using 64-bit aligned
+	operations, with special logic to handle edge bytes.
+
 2023-01-25  Niels Möller  <nisse@lysator.liu.se>
 
 	* ocb.c (ocb_crypt_n, ocb_checksum_n): New functions, processing
